# iTorch

./: .luacheckrc  CMakeLists.txt  CONTRIBUTING.md  IOHandler.lua  LICENSE  PATENTS  Plot.lua  README.md  _env.lua  bokeh.lua  completer.lua  custom.css  custom.js  env.lua  gfx.lua  iTorch Demo.ipynb  iTorch_Demo.ipynb  init.lua  itorch  itorch-scm-1.rockspec  itorch.lua  itorch_launcher  main.lua  out1.json  quiver.html  quiver.json  quiver.lua  quiver.py  run.sh  session.lua  test.lua  util.lua
kernelspec/: kernel.json
static/: bokeh-0.7.0.min.js
